* Added feature to the admin page to allow remembering the last choice of the   user regarding the disclaimer checkbox. This solution was a feature request:   https://github.com/jmeile/agreedisclaimer/issues/3
  and it was solved through two cookies: AGChecked (true if the user accepted
  the disclaimer on a previous visit) and AGLastVisit (date of the last visit
  from the user). The last cookie is needed because I also intruduced the
  capability of automatically expire old set cookies. This is useful if the
  disclaimer terms are changed.

  In order to manipulate cookies, the methods: getCookie, setCookie, and
  expireCookie were added. I know there are methods in ownCloud to do this, but
  I did not get them working. I even read the Developer manual, but there it is
  not clear how to set the 'Response' object. I tried several options, but I
  finished doing it with the php functions.

  The respective methods to manipulate these cookies were added:
  getCheckedCookie, setCheckedCookie, expireCheckedCookie, getLastVisitCookie,
  setLastVisitCookie, and expireLastVisitCookie.

  As a consequence, two new four new App settings were added:

  * useCookie: Indicates whether or not use cookies for remembering the checked
    status of the disclaimer.

  * cookieExpTimeIntv: Cookie expiration interval for new cookies. It can be:
    'days', 'weeks', 'months', or 'years'. If left empty, then the cookies will
    not expire.

  * cookieExpTime: Number of cookieExpTimeIntv when the cookies will be expired,
    ie: if cookieExpTimeIntv is 'days' and this is set to 8, cookies will expire
    in eight days.

  * forcedExpDate: Date on which the already set cookies will expire. ie: if the
    user visits the website and agrees the disclaimer the 8th of August, 2015,
    then the 'AGChecked' cookie will be set to true and its expiration time to:
    cookieExpTime + cookieExpTimeIntv. Suppose that the administrator sets now
    this date to 30th of August because the disclaim

--- a/l10n/en.pot
+++ b/l10n/en.pot
@@ -10,6 +10,9 @@
     "Agree disclaimer":
     "",
 
+    "Automatically expire cookies older than":
+    "",
+
     "Could not read contents from file: %s":
     "",
 
@@ -22,6 +25,12 @@
     "Current PDF":
     "",
 
+    "Days":
+    "",
+
+    "Date and time of the last user's visit":
+    "",
+
     "Decline":
     "",
 
@@ -31,10 +40,19 @@
     "Disclaimer of liability":
     "",
 
+    "Done":
+    "",
+
+    "Expiration interval for new cookies":
+    "",
+
     "File not found":
     "",
 
     "I have read and understood the %s1disclaimer of liability%s2":
+    "",
+
+    "If true, it indicates that the user is a returning visitor, who already accepted the disclaimer":
     "",
 
     "It can be a two character code, ie: %s or a five character code, ie: %s":
@@ -61,7 +79,19 @@
     "Maximum file size in megabytes for the text file":
     "",
 
+    "Months":
+    "",
+
+    "mm/dd/yy":
+    "",
+
     "Neither the file: %s nor: %s exist":
+    "",
+
+    "Next":
+    "",
+
+    "On the contrary, if it is a returning user, who already accepted the disclaimer and there is an expiration time for old cookies, then the age of the AGChecked cookie will be determined by getting the AGLastVisit cookie; if it is higher than the expiration date for old cookies, then it will be invalidated":
     "",
 
     "Please read and agree the disclaimer before proceeding":
@@ -73,6 +103,9 @@
     "Please contact the webmaster":
     "",
 
+    "Prev":
+    "",
+
     "Show a link to a PDF file with the disclaimer":
     "",
 
@@ -82,13 +115,34 @@
     "Show/Hide help":
     "",
 
+    "The value of the AGChecked will be set the first time that the user visits the website or when it has been expired":
+    "",
+
     "This must be set in order to prevent the download of big text files, which may block the login page":
     "",
 
     "To enable more languages, put your text files here":
     "",
 
+    "Today":
+    "",
+
+    "Use a cookie for remembering the user's choice":
+    "",
+
+    "Weeks":
+    "",
+
     "Where":
+    "",
+
+    "Wk":
+    "",
+
+    "Won't expire":
+    "",
+
+    "Years":
     "",
 
     "You must check at least one option!":
