--- a/l10n/pt_BR.json
+++ b/l10n/pt_BR.json
@@ -5,11 +5,17 @@
     "%s is the language code for the respective disclaimer translation":
     "%s é o código  do idioma e da respectiva tradução",
 
+    "Add":
+    "Agregar",
+
     "Agree":
     "Aceitar",
 
     "Agree disclaimer":
     "Aceitar termos",
+
+    "Agreement text":
+    "Texto do acordo",
 
     "Automatically expire cookies older than":
     "Expirar automaticamente cookies anteriores a",
@@ -44,6 +50,9 @@
     "Default language for the text":
     "Idioma padrão para o texto",
 
+    "Delete":
+    "Excluir",
+
     "Disclaimer of liability":
     "Exclusão de Responsabilidade",
 
@@ -62,17 +71,20 @@
     "General Terms and conditions":
     "Termos e Condições Gerais de Uso",
 
-    "I accept the %s1general terms and conditions%s2":
-    "Eu aceito os %s1termos e condições gerais de uso%s2",
+    "GTC":
+    "TCU",
 
-    "I have read and understood the %s1disclaimer of liability%s2":
-    "Eu li e entendi a %s1exclusão de responsabilidade%s2",
+    "Here you can add your own agreement type by specifying the following properties":
+    "",
 
-    "I have read and understood the %s1legal disclaimer%s2":
-    "Eu li e entendi o %s1termo legal%s2",
+    "I accept the @s1general terms and conditions@s2":
+    "Eu aceito os @s1termos e condições gerais de uso@s2",
 
-    "It can be a two character code, ie: %s or a five character code, ie: %s":
-    "Pode ser um código de dois caracteres, por exemplo: %s ou um código de 5 caracteres, por exemplo: %s",
+    "I have read and understood the @s1disclaimer of liability@s2":
+    "Eu li e entendi a @s1exclusão de responsabilidade@s2",
+
+    "I have read and understood the @s1legal disclaimer@s2":
+    "Eu li e entendi o @s1termo legal@s2",
 
     "If the file for the user language doesn't exist, then the file for the default language will be used":
     "Se o arquivo para o idioma do usuário não existir, o arquivo do idioma padrão será utilizado",
@@ -86,8 +98,14 @@
     "If you want to modify this limit, do it at your own risk by changing the value of the parameter: maxAppTxtFileSize inside the config.php file":
     "Se deseja alterar este limite, o faça por seu próprio risco alterando o valor do parámetro: maxAppTxtFileSize dentro do arquivo config.php",
 
+    "It will be used for the title of text dialogs":
+    "",
+
     "In case that the file for the default language doesn't exist, then the user will see an error message when trying to read the text":
     "No caso do arquivo de idioma padrão não existir, o usuário irá visualizar uma mensagem de erro quando tentar ler o texto",
+
+    "It can be a two character code, ie: %s or a five character code, ie: %s":
+    "Pode ser um código de dois caracteres, por exemplo: %s ou um código de 5 caracteres, por exemplo: %s",
 
     "Legal disclaimer":
     "Termo Legal",
@@ -101,6 +119,9 @@
     "Maximum file size in megabytes for the text file":
     "Tamanho máximo do arquivo texto em megabytes",
 
+    "Menu entry":
+    "Texto do menu",
+
     "Menu entry position":
     "Posição no menu",
 
@@ -110,8 +131,14 @@
     "Months":
     "Meses",
 
+    "Name":
+    "Nome",
+
     "Neither the file: %s nor: %s exist":
     "Nenum arquivo: %s ou: %s existem",
+
+    "New":
+    "Novo",
 
     "Next":
     "Próximo",
@@ -119,14 +146,17 @@
     "None":
     "Não exibir",
 
+    "Note":
+    "Nota",
+
     "Ok":
     "Ok",
 
     "On the contrary, if it is a returning user, who already accepted the disclaimer and there is an expiration time for old cookies, then the age of the AGChecked cookie will be determined by getting the AGLastVisit cookie; if it is higher than the expiration date for old cookies, then it will be invalidated":
     "Ao contrário, se é um usuário que já visitou o site, aceitou os termos e existe uma data de expiração apra cookies antigos, a idade de AGChecked será calculada obtendo o cookie AGLastVisit; se este é maior que a data de expiração para cookies antigos então será invalidada",
 
-    "Please read and agree the disclaimer before proceeding":
-    "Por gentileza, leia e aceite os termos antes de prosseguir",
+    "On the \"Selected\" column you can choose the agreement type to be used by your OwnCloud":
+    "",
 
     "Please also note that there is a hard coded limit of: %s Megabytes; this limit was set in order to prevent setting higher values that will make ownCloud to crash":
     "Por gentileza, note que existe um limite máximo de: %s Megabytes; este valor foi atribuído para evitar que valores maiores causem problemas no ownCloud ",
@@ -134,8 +164,23 @@
     "Please contact the webmaster":
     "Por gentileza, contacte o webmaster",
 
+    "Please make sure that the placeholders: \"@s1\" and \"@s2\" are present in the \"Agreement text\"":
+    "",
+
+    "Please note that the placeholders: @s1 and @s2 are necessary to indicate where the text link on the login page begins and ends respectively":
+    "",
+
+    "Please read and agree the disclaimer before proceeding":
+    "Por gentileza, leia e aceite os termos antes de prosseguir",
+
     "Prev":
     "Anterior",
+
+    "Selected":
+    "Seleccionado",
+
+    "Short text, which will be used for the menu entry on the user pages":
+    "",
 
     "Show a link to a PDF file with the disclaimer":
     "Mostrar um link para o arquivo PDF com os termos",
@@ -146,8 +191,29 @@
     "Show/Hide help":
     "Mostrar/Ocultar ajuda",
 
+    "Text that will appear on the login dialog":
+    "",
+
+    "The default agreements: \"Disclaimer of liability\", \"Legal disclaimer\", and \"General Terms and conditions\" can't be deleted":
+    "",
+
+    "The fields: \"Name\" and \"Agreement text\" are obligatory":
+    "",
+
+    "The placeholder: \"@s1\" must be before \"@s2\"":
+    "",
+
+    "The placeholders: \"@s1\" and \"@s2\" can only appear once on the \"Agreement text\"":
+    "",
+
+    "The texts of the columns: \"Name\", \"Menu entry\", and \"Agreement text\" must be given in English, then you need to add the respective translations to files under the \"l10n\" folder":
+    "",
+
     "The value of the AGChecked will be set the first time that the user visits the website or when it has been expired":
     "O valor de AGChecked será atribuído na primeira vez que o usuário visita o website ou quando estiver expirado",
+
+    "This is the name of your own agreement":
+    "",
 
     "This must be set in order to prevent the download of big text files, which may block the login page":
     "Este valor deve ser atribuído para previnir o download de grande arquivos de texto, o que pode bloquear a página de login",
@@ -172,6 +238,9 @@
 
     "Where":
     "Onde",
+
+    "With the \"delete\" button you can remove your own agreements":
+    "",
 
     "Wk":
     "Sm",
